; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ida/extr_ida.c_ida_alloc_qcbs.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ida/extr_ida.c_ida_alloc_qcbs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.ida_softc = type { i32, %struct.TYPE_4__*, i32, %struct.ida_qcb* }
%struct.TYPE_4__ = type { %struct.ida_qcb* }
%struct.ida_qcb = type { %struct.TYPE_4__*, i32, i32, %struct.ida_softc*, i32 }

@IDA_QCB_MAX = common dso_local global i32 0, align 4
@QCB_FREE = common dso_local global i32 0, align 4
@link = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ida_softc*)* @ida_alloc_qcbs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ida_alloc_qcbs(%struct.ida_softc* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ida_softc*, align 8
  %4 = alloca %struct.ida_qcb*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ida_softc* %0, %struct.ida_softc** %3, align 8
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %60, %1
  %8 = load i32, i32* %6, align 4
  %9 = load i32, i32* @IDA_QCB_MAX, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %63

11:                                               ; preds = %7
  %12 = load %struct.ida_softc*, %struct.ida_softc** %3, align 8
  %13 = getelementptr inbounds %struct.ida_softc, %struct.ida_softc* %12, i32 0, i32 3
  %14 = load %struct.ida_qcb*, %struct.ida_qcb** %13, align 8
  %15 = load i32, i32* %6, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.ida_qcb, %struct.ida_qcb* %14, i64 %16
  store %struct.ida_qcb* %17, %struct.ida_qcb** %4, align 8
  %18 = load %struct.ida_softc*, %struct.ida_softc** %3, align 8
  %19 = getelementptr inbounds %struct.ida_softc, %struct.ida_softc* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 8
  %21 = load %struct.ida_qcb*, %struct.ida_qcb** %4, align 8
  %22 = getelementptr inbounds %struct.ida_qcb, %struct.ida_qcb* %21, i32 0, i32 4
  %23 = call i32 @bus_dmamap_create(i32 %20, i32 0, i32* %22)
  store i32 %23, i32* %5, align 4
  %24 = load i32, i32* %5, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %11
  %27 = load i32, i32* %5, align 4
  store i32 %27, i32* %2, align 4
  br label %64

28:                                               ; preds = %11
  %29 = load %struct.ida_softc*, %struct.ida_softc** %3, align 8
  %30 = load %struct.ida_qcb*, %struct.ida_qcb** %4, align 8
  %31 = getelementptr inbounds %struct.ida_qcb, %struct.ida_qcb* %30, i32 0, i32 3
  store %struct.ida_softc* %29, %struct.ida_softc** %31, align 8
  %32 = load i32, i32* @QCB_FREE, align 4
  %33 = load %struct.ida_qcb*, %struct.ida_qcb** %4, align 8
  %34 = getelementptr inbounds %struct.ida_qcb, %struct.ida_qcb* %33, i32 0, i32 2
  store i32 %32, i32* %34, align 4
  %35 = load %struct.ida_softc*, %struct.ida_softc** %3, align 8
  %36 = getelementptr inbounds %struct.ida_softc, %struct.ida_softc* %35, i32 0, i32 1
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %36, align 8
  %38 = load i32, i32* %6, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i64 %39
  %41 = load %struct.ida_qcb*, %struct.ida_qcb** %4, align 8
  %42 = getelementptr inbounds %struct.ida_qcb, %struct.ida_qcb* %41, i32 0, i32 0
  store %struct.TYPE_4__* %40, %struct.TYPE_4__** %42, align 8
  %43 = load %struct.ida_qcb*, %struct.ida_qcb** %4, align 8
  %44 = load %struct.ida_qcb*, %struct.ida_qcb** %4, align 8
  %45 = getelementptr inbounds %struct.ida_qcb, %struct.ida_qcb* %44, i32 0, i32 0
  %46 = load %struct.TYPE_4__*, %struct.TYPE_4__** %45, align 8
  %47 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %46, i32 0, i32 0
  store %struct.ida_qcb* %43, %struct.ida_qcb** %47, align 8
  %48 = load %struct.ida_softc*, %struct.ida_softc** %3, align 8
  %49 = load %struct.ida_qcb*, %struct.ida_qcb** %4, align 8
  %50 = getelementptr inbounds %struct.ida_qcb, %struct.ida_qcb* %49, i32 0, i32 0
  %51 = load %struct.TYPE_4__*, %struct.TYPE_4__** %50, align 8
  %52 = call i32 @idahwqcbvtop(%struct.ida_softc* %48, %struct.TYPE_4__* %51)
  %53 = load %struct.ida_qcb*, %struct.ida_qcb** %4, align 8
  %54 = getelementptr inbounds %struct.ida_qcb, %struct.ida_qcb* %53, i32 0, i32 1
  store i32 %52, i32* %54, align 8
  %55 = load %struct.ida_softc*, %struct.ida_softc** %3, align 8
  %56 = getelementptr inbounds %struct.ida_softc, %struct.ida_softc* %55, i32 0, i32 0
  %57 = load %struct.ida_qcb*, %struct.ida_qcb** %4, align 8
  %58 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @link, i32 0, i32 0), align 4
  %59 = call i32 @SLIST_INSERT_HEAD(i32* %56, %struct.ida_qcb* %57, i32 %58)
  br label %60

60:                                               ; preds = %28
  %61 = load i32, i32* %6, align 4
  %62 = add nsw i32 %61, 1
  store i32 %62, i32* %6, align 4
  br label %7

63:                                               ; preds = %7
  store i32 0, i32* %2, align 4
  br label %64

64:                                               ; preds = %63, %26
  %65 = load i32, i32* %2, align 4
  ret i32 %65
}

declare dso_local i32 @bus_dmamap_create(i32, i32, i32*) #1

declare dso_local i32 @idahwqcbvtop(%struct.ida_softc*, %struct.TYPE_4__*) #1

declare dso_local i32 @SLIST_INSERT_HEAD(i32*, %struct.ida_qcb*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
